--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "otp-verification",
   "main": "expo-router/entry",
+  "proxy": "http://localhost:8080",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -17,6 +18,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -30,9 +32,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-otp-component": "^1.0.6",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
